<resources>
    <string name="app_name">Entry Task</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email_et_hint">Enter valid email</string>
    <string name="password_et_hint">Enter password</string>
    <string name="name_et_hint">Enter your name</string>
    <string name="surname_et_hint">Enter your surname</string>
    <string name="login_button">Log In</string>
    <string name="register_button">Register</string>
    <string name="exit_button">Exit</string>
    <string name="logout_button">Log Out</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must not be less than 6 characters long, must have an uppercase letter, a lowercase letter and a digit</string>
    <string name="empty_field">Empty field</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="user_not_found">User %1$s not found</string>
    <string name="registration_success">User %1$s successfully registered!</string>
</resources>